Reactor-wide SonarQube quality sweep + ConfigMap CoW + HTTP-entity equality
Sweep of open SonarQube issues across ~20 modules: real fixes where warranted
(ReDoS regex hardening in Config, ThreadLocal leak cleanup, content-based
equals/hashCode/toString for array-holding records (S6218), lambda->method-ref
conversions, extract-method refactors for cognitive complexity, redundant
sealed permits removal, lock-free AtomicReference publication in McpRestServlet),
plus false-positive suppressions carrying one-line rationale and a project-level
S110 inheritance-depth exclusion for the HTTP status beans.

Also includes the ConfigMap copy-on-write redesign with an immutable State
snapshot and ConfigMapEntry record (TODO-258), and the HTTP-entity equality
contract redesign: SerializedEntity now includes serializer/schema in
equals/hashCode and entity leaves use per-leaf equality to stop cross-leaf
matches while preserving the bean.equals(bean.unmodifiable()) invariant.

Co-authored-by: Cursor <cursoragent@cursor.com>